Update copyright headers to 2010.

--- a/machine/t2/t2.md
+++ b/machine/t2/t2.md
@@ -1,6 +1,6 @@
 #--------------------------------------------------------------------------
 # Machine description for Terminator 2
-# (C) Copyright 2007, 2009 by Brian Dominy <brian@oddchange.com>
+# (C) Copyright 2007-2010 by Brian Dominy <brian@oddchange.com>
 #
 # See tools/genmachine for more information about the format of this file.
 #--------------------------------------------------------------------------
