--- a/machine/t2/t2.md
+++ b/machine/t2/t2.md
@@ -105,7 +105,7 @@ define MACHINE_START_BALL_MUSIC MUS_T2_PLUNGER
 82: Right Ramp Million
 83: Hurry Up
 84: Start, start
-85: Drop Target
+85: Drop Target, debounce(TIME_200MS)
 86: Top Lane Left
 87: Top Lane Middle
 88: Top Lane Right
@@ -403,3 +403,6 @@ Kickback Driver: driver(spsol),
 	sw=SW_LEFT_OUTLANE, sol=SOL_KICKBACK,
 	ontime=12, offtime=18
 
+Skull Drop: driver(drop),
+	sol_up=SOL_SKULL_DROP_UP, sol_down=SOL_SKULL_DROP_DOWN,
+	sw=SW_DROP_TARGET, sw_event=sw_drop_target
