Shooter switches must now hold state for 200ms before activating.
This compensates for some bounce that typically occurs after the
ball is kicked into the shooter lane.

--- a/machine/t2/t2.md
+++ b/machine/t2/t2.md
@@ -184,7 +184,7 @@ define MACHINE_START_BALL_MUSIC MUS_T2_PLUNGER
 75: Target 5 Low, lamp(LM_SKILL_5)
 76: Ball Popper
 77: Drop Target, edge
-78: Shooter, edge, shooter, noplay
+78: Shooter, edge, shooter, noplay, debounce(TIME_200MS)
 
 ##########################################################################
 # Drives
